==> athosellinas/sh1106/firmware/sh1106.cpp <==
#include "application.h"
#include "sh1106.h"
#define CHARACTER_WIDTH 6

void sh1106_lcd::Initialize()
{
    Wire.begin(); // begin without address as a master device

    SendCommand(0xAE, StartSend); //DISPLAY_OFF

    SendCommand(0x02, MidSend); //LOW_COLUMN_ADDRESS
    SendCommand(0x10, MidSend); //HIGH_COLUMN_ADDRESS

    SendCommand(0x40, MidSend); //START_LINE_ADDRESS

    SendCommand(0xB0, MidSend); //SET_PAGE_ADDRESS start at page address 0 up to 7

    SendCommand(0x81, MidSend); //SET_CONTRAST_CTRL_REG
    SendCommand(0x80, MidSend); //CONTRAST VALUE *128

    SendCommand(0xA1, MidSend); //SET_SEGMENT_REMAP

    SendCommand(0xA6, MidSend); //SET_NORMAL_DISPLAY (0xA7 to invert)
    SendCommand(0xA8, MidSend); //SET_MULTIPLEX_RATIO
    SendCommand(0x3F, MidSend); //duty cycle = 1/32

    SendCommand(0xAD, MidSend); //set charge pump enable
	     /****  From docs  ****
	     Set DC-DC OFF/ON: (Double Bytes Command)
         This command is to control the DC-DC voltage converter. The converter will be turned on by issuing this command then display ON command. The panel display must be off while issuing this command.
         * DC-DC Control Mode Set: (ADH) */
    SendCommand(0x8B, MidSend); //external VCC on / 0x8A Disabled

    SendCommand(0x30, MidSend); // 0X30---0X33  set VPP  9V liangdu!!!!  (wtf does that mean?)

    SendCommand(0xC8, MidSend); //SET_COM_OUTPUT_SCAN_DIRECTION

    SendCommand(0xD3, MidSend); //SET_DISPLAY_OFFSET
    SendCommand(0x00, MidSend); // no offset or 0x20)

    SendCommand(0xD5, MidSend); //SET_DISPLAY_CLOCK_DIVIDE / osc division
    SendCommand(0x80, MidSend); // Osc Freq 0x80, 0xF0

    SendCommand(0xD9, MidSend); //SET_PRE_CHARGE_PERIOD
    SendCommand(0x1F, MidSend); // 0x1F, or 0x22

    SendCommand(0xDA, MidSend); //SET_COM_PINS_HARDWARE_CONFIG
    SendCommand(0x12, MidSend);

    SendCommand(0xDB, MidSend); //SET_VCOMH
    SendCommand(0x40, MidSend); // 0.77xVcc = 0x20  (or 0x40)  VCOM  = � X V REF = (0.430 + A[7:0] X 0.006415) X VREF

    SendCommand(0xAF, FinishSend); //DISPLAY_ON

/*****  Possibly unneeded controls ***
    SendCommand(0x20, MidSend); //SET_MEMORY_ADDRESSING_MODE
    SendCommand(0x02, MidSend);  //PAGE (was undefined)

    SendCommand(0x7F, MidSend);  //Display Startline

    SendCommand(0xA4, MidSend); //OUTPUT_FOLLOWS_RAM

    SendCommand(0x8D, MidSend); //SET_DC_DC_ENABLE  (Docs say this is entire display on/off)
    SendCommand(0x14, MidSend); //enable, 0x10=disable
*********************************/

    memset(m_screen, 0, SCREEN_WIDTH * MAX_PAGE_COUNT);
    m_currentLine = 0;
    m_cursor = 0;
}

byte sh1106_lcd::SendCommand(byte command, SendState state)
{
    if (state == StartSend || state == Complete)
    {
        Wire.beginTransmission(SH1106_ADDR1);
        Wire.write(SH1106_COMMAND);
    }

    return SendByte(command, state);
}

byte sh1106_lcd::SendData(byte data, SendState state)
{
    if (state == StartSend || state == Complete)
    {
        Wire.beginTransmission(SH1106_ADDR1);
        Wire.write(SH1106_DATA);
    }

    return SendByte(data, state);
}

byte sh1106_lcd::SendByte(byte data, SendState state)
{
    Wire.write(data);

    byte transmissionStatus = 0;

    if (state == FinishSend || state == Complete)
    {
        transmissionStatus = Wire.endTransmission();
    }

    return transmissionStatus;
}
