==> bobbywyx/rp2040_devkit/unused/sh1106.cpp <==
#include <stdio.h>
#include <cstdlib>
#include <cstring>
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include "pico/stdlib.h"
#include "pico/binary_info.h"
#include "hardware/i2c.h"
#include "sh1106.h"
#define OLED_i2c i2c0
#define OLED_SDA 16
#define OLED_SCL 17
#define CHARACTER_WIDTH 8

void sh1106_lcd::Initialize()
{
#if !defined(OLED_i2c) || !defined(OLED_SDA) || !defined(OLED_SCL)
    #warning i2c / oled_i2d example requires a board with I2C pins
    puts("Default I2C pins were not defined");
#else
    // useful information for picotool
    bi_decl(bi_2pins_with_func(OLED_SDA, OLED_SCL, GPIO_FUNC_I2C));
    bi_decl(bi_program_description("OLED I2C example for the Raspberry Pi Pico"));

    printf("Hello, OLED display! Look at my raspberries..\n");

    // I2C is "open drain", pull ups to keep signal high when no data is being
    // sent
    i2c_init(OLED_i2c, 400 * 1000);
    gpio_set_function(OLED_SDA, GPIO_FUNC_I2C);
    gpio_set_function(OLED_SCL, GPIO_FUNC_I2C);
    gpio_pull_up(OLED_SDA);
    gpio_pull_up(OLED_SCL);

//    i2c_write_blocking(OLED_i2c, (OLED_ADDR & OLED_WRITE_MODE), buf, 2, false);


//    Wire.begin(); // begin without address as a master device



    SendCommand(DISPLAY_OFF, StartSend);
    SendCommand(SET_MEMORY_ADDRESSING_MODE, MidSend);
    SendCommand(PAGE, MidSend);
    SendCommand(SET_PAGE_ADDRESS, MidSend); // start at page address 0
    SendCommand(SET_COM_OUTPUT_SCAN_DIRECTION, MidSend);
    SendCommand(LOW_COLUMN_ADDRESS, MidSend);
    SendCommand(HIGH_COLUMN_ADDRESS, MidSend);
    SendCommand(START_LINE_ADDRESS, MidSend);
    SendCommand(SET_CONTRAST_CTRL_REG, MidSend);
    SendCommand(0x7F, MidSend);
    SendCommand(SET_SEGMENT_REMAP, MidSend);
    SendCommand(SET_NORMAL_DISPLAY, MidSend);
    SendCommand(SET_MULTIPLEX_RATIO, MidSend);
    SendCommand(0x3F, MidSend);
    SendCommand(OUTPUT_FOLLOWS_RAM, MidSend);
    SendCommand(SET_DISPLAY_OFFSET, MidSend);
    SendCommand(0x00, MidSend); // no offset
    SendCommand(SET_DISPLAY_CLOCK_DIVIDE, MidSend);
    SendCommand(0xF0, MidSend);
    SendCommand(SET_PRE_CHARGE_PERIOD, MidSend);
    SendCommand(0x22, MidSend);
    SendCommand(SET_COM_PINS_HARDWARE_CONFIG, MidSend);
    SendCommand(0x12, MidSend);
    SendCommand(SET_VCOMH, MidSend);
    SendCommand(0x20, MidSend); // 0.77xVcc
    SendCommand(SET_DC_DC_ENABLE, MidSend);
    SendCommand(0x14, MidSend);

    SendCommand(DISPLAY_ON, FinishSend);

    memset(m_screen, 0, SCREEN_WIDTH * MAX_PAGE_COUNT);
    m_currentLine = 0;
    m_cursor = 0;

#endif
}

byte sh1106_lcd::SendCommand(byte command, SendState state)
{
    if (state == StartSend || state == Complete)
    {
//        Wire.beginTransmission(SH1106_ADDR1);
//        Wire.write(SH1106_COMMAND);
        i2c_write_blocking(OLED_i2c, SH1106_ADDR1 , SH1106_COMMAND, 1, false);


    }

    return SendByte(command, state);
}

byte sh1106_lcd::SendData(byte data, SendState state)
{
    if (state == StartSend || state == Complete)
    {
//        Wire.beginTransmission(SH1106_ADDR1);
//        Wire.write(SH1106_DATA);
        i2c_write_blocking(OLED_i2c, (SH1106_ADDR1)  , reinterpret_cast<const uint8_t *>(SH1106_DATA), 1, false);

    }

    return SendByte(data, state);
}

byte sh1106_lcd::SendByte(byte data, SendState state)
{
//    Wire.write(data);
    i2c_write_blocking(OLED_i2c, (SH1106_ADDR1)  , reinterpret_cast<const uint8_t *>(&data), 1, false);


    byte transmissionStatus = 0;

    if (state == FinishSend || state == Complete)
    {
//        transmissionStatus = Wire.endTransmission();
    }

    return transmissionStatus;
}
